--- a/view/frontend/web/template/payment/paypalplusmx-form.html
+++ b/view/frontend/web/template/payment/paypalplusmx-form.html
@@ -20,6 +20,9 @@
     <div id="iframe-error" data-bind="visible: false" class="message notice">
         <div><!-- ko i18n: "We cannot process PayPal Payments at this time. Please try again later" --><!-- /ko --></div>
     </div>
+    <div id="iframe-error-payment-not-ready" data-bind="visible: false" class="message notice">
+        <div><!-- ko i18n: "In order to use this payment method, please select it and add a Billing Address." --><!-- /ko --></div>
+    </div>
     <div id="iframe-error-email" data-bind="visible: false" class="message notice">
         <div><!-- ko i18n: "Please specify an e-mail address and try again" --><!-- /ko --></div>
     </div>
