--- a/view/frontend/templates/checkout/success.phtml
+++ b/view/frontend/templates/checkout/success.phtml
@@ -28,7 +28,7 @@
  */
 ?>
 
-<?php /** @var $block qbo\PayPalPlusMx\Block\Checkout\Success */ ?>
+<?php /** @var $block Qbo\PayPalPlusMx\Block\Checkout\Success */ ?>
            
 <!-- Custom PPPlus additional info -->
 <?php $block->_initOrder(); ?>
