--- a/view/frontend/templates/root.phtml
+++ b/view/frontend/templates/root.phtml
@@ -27,7 +27,7 @@
  */
 
 $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
-$rootTemplate = $objectManager->create('qbo\PayPalPlusMx\Block\View\Root');
+$rootTemplate = $objectManager->create('Qbo\PayPalPlusMx\Block\View\Root');
 ?>
 <!doctype html>
 <html <?php /* @escapeNotVerified */ echo $htmlAttributes ?>>
